inventory alignment fixed

--- a/public/css/mainWebsite/CafToken.css
+++ b/public/css/mainWebsite/CafToken.css
@@ -24,7 +24,7 @@ body {
     position: relative;
     height: fit-content;
     overflow: hidden;
-    padding: 14px 20px;
+    
     text-align: center;
     background: #131313;
     background-image: url("../../img/mainWebsite/FBH-7.png");
