--- a/public/css/usersProfile/personalInformation.css
+++ b/public/css/usersProfile/personalInformation.css
@@ -733,7 +733,6 @@ margin-top:20px;
    border-bottom: 2px solid #49b821;
     width:200%;
     background-color:#F1FCF3;
-    border:1px solid red;
     overflow: auto;
 }
 
@@ -2083,7 +2082,6 @@ color:#49C01F;
    }
    .inventoryBody {
     width:auto;
-    overflow: hidden;
    }
    .inventory {
     margin-top:30px;
@@ -2091,7 +2089,7 @@ color:#49C01F;
   
    }
    .inventoryList {
-    width:120%;
+    width:100%;
 }
   
    .inventoryButtons {
